# devops-api-flask

./: .coverage  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  README.md.save  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.gitea/workflows/: deploy.yml
devops_api_flask.egg-info/: SOURCES.txt  requires.txt
taskboard.egg-info/: SOURCES.txt
tests/: test_api.py
