[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-api-flask"
version = "0.1.0"
description = "A simple API built with Flask"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
py-modules = ["app"]
